# goldmine-quik-gateway-2

./: CMakeLists.txt  LICENSE  exceptions.h  log.cpp  log.h  main.cpp
binary/: rawbytearrayparser.cpp  rawbytearrayparser.h
core/: core.cpp  core.h  dataimportserver.cpp  dataimportserver.h  quotetable.cpp  quotetable.h
core/broker/: paperbroker.cpp  paperbroker.h  quikbroker.cpp  quikbroker.h
core/tables/: datasink.h  tableconstructor.cpp  tableconstructor.h  tableparser.h  tableparserfactoryregistry.cpp  tableparserfactoryregistry.h
core/tables/parsers/: alldealstableparser.cpp  alldealstableparser.h  currentparametertableparser.cpp  currentparametertableparser.h
doc/: sample-table-specification.json
tests/: test.cpp  xl_test.cpp
ui/: mainwindow.cpp
xl/: xlparser.cpp  xltable.h
